--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
-    "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "phosphor-react": "^1.4.1",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
