--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "^15.1.3",
     "phosphor-react": "^1.4.1",
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
