--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "g": "^2.0.1",
     "helmet": "^8.1.0",
     "mongoose": "^9.0.2",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "nodemon": "^3.1.11"
   }
 }
