--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -18,7 +19,6 @@
     "g": "^2.0.1",
     "helmet": "^8.1.0",
     "mongoose": "^9.0.2",
-    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11"
   }
 }
